# 2017_Plazza

./: .gitignore  CMakeLists.txt  Makefile  README.md  data  plazza_ui  save
SFML/: Makefile  Sfml.cpp  Sfml.hpp
src/: ClientSocket.cpp  ClientSocket.hpp  Fork.cpp  Fork.hpp  ForkPool.cpp  ForkPool.hpp  GuiManager.cpp  GuiManager.hpp  Keys.hpp  Plazza.cpp  Plazza.hpp  ServerSocket.cpp  ServerSocket.hpp  Socket.cpp  Socket.hpp  TCPSocket.cpp  Thread.cpp  Thread.hpp  ThreadPool.cpp  ThreadPool.hpp  datatype.hpp  main_cli.cpp  main_gui.cpp  plazza.cpp  plazza.hpp  slave.cpp  slave.hpp  slavePool.cpp  slavePool.hpp  threadz.cpp  threadz.hpp  threadzPool.cpp  threadzPool.hpp
src/sockets/: ClientSocket.cpp  ClientSocket.hpp  ServerSocket.cpp  ServerSocket.hpp  Socket.cpp  Socket.hpp  TCPSocket.cpp  TCPSocket.hpp  UnixSocket.cpp  UnixSocket.hpp  _socket_exemple.cpp
tests/: commands  phone.txt  phones.txt  tests.txt
